--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,9 @@
 FROM node:20-alpine3.18 as builder
-
 WORKDIR /app
-
 COPY package.json .
-
 RUN npm install
-
 COPY . .
-
-CMD ["npm", "run", "build"]
+RUN npm run build
 
 FROM nginx
 EXPOSE 3000
